# fishsense-video-frame-extractor

./: pyproject.toml  test.py
fishsense_video_frame_extractor/: __main__.py  run.py
fishsense_video_frame_extractor/commands/: extract_frames.py
